# curation-bench

./: .gitmodules  README.md
baselines/: .env  README.md  pyproject.toml
baselines/dataset/: ards.py  generate_run.py  icons.py  make_random.py  template_rewrite.py
baselines/scripts/: baseline_common.py  download_llava665k.py  generate_ards.py  generate_icons.py  generate_random.py  generate_template_rewrite.py  setup_baselines.py
